# ModuleManagerCpp

./: CMakeLists.txt  ModuleManagerCpp.cpp  ModuleManagerCpp.sln  ModuleManagerCpp.vcxproj  ModuleManagerCpp.vcxproj.filters  ReadME.md  build.txt.bat
core/: IModule.h  ModuleManager.cpp  ModuleManager.h  Platform.cpp  Platform.h
example/Gameplay/: CMakeLists.txt  GameplayModule.cpp  GameplayModule.h
example/Rendering/: CMakeLists.txt  RenderingModule.cpp  RenderingModule.h
